update fixed photo captions on mobile

--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -661,13 +661,13 @@ nav {
 
 	&.first-caption {
 
-		bottom:8%;
+		bottom: 8%;
 		bottom: 8vh;
 
 		@include breakpoint(medium) {
 
-			bottom:15%;
-			bottom: 15vh;
+			bottom:20%;
+			bottom:20vh;
 
 		}
 
@@ -676,8 +676,9 @@ nav {
 
 	@include breakpoint(medium) {
 
-		bottom:15%;
-		bottom: 15vh;
+		bottom: 20%;
+		bottom: 20vh;
+
 
 	}
 
